--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
     display: flex;
     flex-direction: column;
+    font-family: Roboto, sans-serif;
 }
 
 .header {
@@ -57,7 +60,29 @@ button {
     background-color: #3882f6;
     color:#E5E7EB;
     border-radius: 5px;
+    border: 2px solid #ffffff;
 }
+
+.randInf{
+    text-align: center;
+    padding: 50px;
+}
+
+.randInfText {
+    font-size: 36px;
+    font-weight: extra-bold;
+    color: #1f2937;
+}
+
+.randInfImages{
+    display: flex;
+    justify-content: center;
+}
+
+.randInfImages .entry img{
+    width: 100px;
+}
+
 
 
 .footer {
