Fill in quote section

--- a/style.css
+++ b/style.css
@@ -83,8 +83,28 @@ button {
     width: 100px;
 }
 
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    background-color: #E5E7EB;
+   text-align: center;
+   padding-left: 300px;
+   padding-right: 300px;
+   padding-top: 100px;
+   padding-bottom: 100px;
 
+}
 
+.quote .quoteText {
+    font-weight: lighter;
+    font-style: italic;
+    text-align: left;
+}
+
+.quote .quoteAttr {
+    font-weight: bolder;
+    text-align: right;
+}
 .footer {
     text-align: center;
 }
