--- a/style.css
+++ b/style.css
@@ -106,5 +106,8 @@ button {
     text-align: right;
 }
 .footer {
+    color: #F9FaF8;
     text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
