--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ button {
     color:#E5E7EB;
     border-radius: 5px;
     border: 2px solid #ffffff;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .randInf{
@@ -105,6 +109,23 @@ button {
     font-weight: bolder;
     text-align: right;
 }
+
+.actionCall {
+    color: #F9FaF8;
+    text-align: left;
+    display: flex;
+    background-color: #3882f6;
+    justify-content: center;
+    align-items: center;
+    margin: 80px;
+    padding-bottom: 30px;
+}
+
+.actionCallText h5 {
+    font-size: 18px;
+    font-weight: bolder;
+}
+
 .footer {
     color: #F9FaF8;
     text-align: center;
